<resources>

    <string name="add_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="native_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="reword_id">	ca-app-pub-3940256099942544/5224354917</string>
    <string name="open_id">ca-app-pub-3940256099942544/9257395921</string>


    <string name="app_name">Whatscan Pro</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Status Saver Whatscan</string>
    <string name="permission_preference">PERMISSION_PREFERENCE</string>
    <string name="permission_read_storage">PERMISSION_READ_STORAGE</string>
    <string name="permission_write_storage">PERMISSION_WRITE_STORAGE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="voice_text_description">QR Code Reader &amp; Barcode Scanner Free is build for speed and performance to be the fastest QR reader / barcode scanner out there. QR Code Reader &amp; Barcode Scanner Free is an essential app for every Android device. </string>
    <string name="qrcode_description">Screen Mirroring For All TV and other smart device - This App Able to play videos, music, photos, etc. in my smartphone with any devices like : smartphone, smart TV, laptop, tablet, etc at anywhere. </string>
    <string name="rate">Rate</string>
    <string name="history">History</string>
    <string name="app_name2">Qr scan</string>
    <string name="action_settings">Settings</string>
    <string name="ads_sponsored_by_lennar_corp">Ads Sponsored by Whatzweb Team</string>
    <string name="qr_code_reader_amp_barcode_scanner"><![CDATA[QR Code Reader & Barcode Scanner]]></string>
    <string name="screen_mirroring">Screen Mirroring For All TV</string>
    <string name="qr_code_scanner_or_generator">Qr Code Scanner Or Generator</string>

    <string name="add">Update Apps</string>
    <string name="contact">Contact</string>
    <string name="email">appifydevs000@gmail.com</string>
    <string name="empty_message">No chats available</string>
    <string name="only_empty_text">No images available</string>
    <string name="files">files</string>
    <string name="help">Tutorial</string>
    <string name="howitworks">How it works?</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate</string>
    <string name="message_deleted">Deleted Message Found</string>
    <string name="message_was_deleted">Tap to check deleted message now.</string>
    <string name="noti_obserb">notionserving</string>
    <string name="off">Service is not running. Click to start</string>
    <string name="on">Service is running</string>
    <string name="refresh_files">refresh_files</string>
    <string name="remove_permission_framgent">remove_permission_fragment</string>
    <string name="select_app">Select Apps to Monitor</string>
    <string name="thismsgwasdeleted">This message was deleted</string>
    <string name="unread">UNREAD</string>

    <string name="save_successful_message">Saved To Gallery!</string>
    <string name="save_error_message">Could not save,Try again later</string>
    <string name="title_pics">You have not watched any whatsapp status currently ,Once you watch a whatsapp status, it will automatically show here for you to download</string>

    <string name="home">Home</string>

    <string name="repeat_menu">Repeat Message</string>
    <string name="stories_menu">Download Stories</string>
    <string name="message_menu">Message W/O Number</string>
    <string name="more_menu">More</string>
    <string name="save_number">Save number in Application</string>
    <string name="send_message">Open/Start Whatsapp Chat</string>
    <string name="saved_numbers">Select from saved contacts</string>
    <string name="delete">Delete</string>
    <string name="tagline">One App For All Your Needs</string>
    <string name="more_coming">More coming soon</string>
    <string name="share_app_subject">Yo! Check out %s</string>
    <string name="share_app_body">Check out %1$s, this Whatscan app is really cool! %2$s</string>
    <string name="email_client">Choose Client</string>
    <string name="rate_review"><![CDATA[Rate & Review]]></string>
    <string name="share">Share</string>
    <string name="format_request_permision">%1$s will need to have read/write permission your sdcard to save Files.Do you want to grant it?</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_send">Send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="prime"> Elevate your experience and take your app usage to the next level with premium features and exclusive content. Say goodbye to interruptions and embrace seamless app usage with our \"Remove Ads\"  feature!</string>
    <string name="prime1">Most affordable price ever !!!</string>

    <string name="disc">All Purchases use Google Play\'s billing library and will go through your Google Account. Subscription will be auto renewed at the each cycle. You can Cancel Anytime!\nPlease note that certain conditions may apply in Cancel Process. Lifetime subscription cannot be canceled. Contact <b>banrossyn@gmail.com</b> for any queries.\nYour happiness is our priority!</string>

    <string name="purchase_list">✯UNLIMITED Downloads\n✯No Ads\n✯Faster Downloads\n✯Download Story\'s without Login\n✯Priority Support\n✯Private Account Downloads\n✯Cancel Anytime!</string>

    <string name="purchase_dialog">Download diamonds is the number of downloads you can do without leaving the Instagram! You can add more diamonds for free by watching a video ad or Get Premium for <b>Unlimited Balance!</b></string>
    <string name="purchase_dialog_note">Note: It is deducted only when you download without opening the InSaver app. These Diamonds will be not be deducted when you Download using the \'Paste URL\' Method inside the InSaver App.</string>
    <string name="how_to_download"><u>How to Download?</u></string>
    <string name="premium_user">Dear User, you have already taken a subscription in the app. You can wait for continue a new subscription. You get the same facility if you take multiple subscriptions. Please wait for the last subscription to expire.\nNote: You will be responsible for the multiple payments.</string>
    <string name="google_refund_policy"><u>Google Refund policy</u></string>
    <string name="google_subscription"><u>Google Privacy Policy</u></string>
    <string name="google_terms_of_service"><u>Terms of Service</u></string>

    <string name="manage_subscription">https://play.google.com/store/account/subscriptions</string>
    <string name="google_privacy">https://policies.google.com/privacy</string>
    <string name="google_terms">https://policies.google.com/terms</string>
    <string name="refund_policy">https://support.google.com/googleplay/answer/2479637?sjid=5262144278901328310-AP</string>

</resources>
