<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/continues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/prime"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/prime1"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/manage_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:text="Manage Subscriptions"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_purchaseList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="17dp"
                android:layout_marginVertical="10dp"
                android:text="@string/disc"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/refund_policy"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/google_refund_policy"
                    android:textColor="@color/black"
                    android:textSize="8dp" />

                <TextView
                    android:id="@+id/sub_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/google_subscription"
                    android:textColor="@color/black"
                    android:textSize="8dp" />

                <TextView
                    android:id="@+id/terms_sev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/google_terms_of_service"
                    android:textColor="@color/black"
                    android:textSize="8dp" />

            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/continues"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:isScrollContainer="false"
        android:text="Continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:icon="@drawable/ic_next"
        app:iconGravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>